# python_builder

./: .gitignore  README.md  pyproject.toml  python-shell.nix  requirements.txt  setup.py  shell.nix
.github/workflows/: publish.yml  pylint.yml  python-app.yml
build_system_parser/: __init__.py  bazel.py  cargo.py  cli.py  cmake.py  common.py  compile.py  compile_commands.py  make.py  ninja.py
build_system_parser/parse_cmake/: parsing.py
python_builder/: __init__.py  bazel.py  builder.py  cargo.py  cmake.py  common.py  compile_commands.py  make.py  ninja.py
python_builder.egg-info/: PKG-INFO  SOURCES.txt
python_builder/parse_cmake/: cmake_pprint.py  parsing.py
python_builder/pymake/: __init__.py  _pymake.py
test/: __init__.py  bazel.py  cargo.py  cli.py  cmake.py  compile_commands.json  compile_commands.py  make.py  ninja.py
test/bazel/: .gitignore
test/bazel/stage1/: bazel-bin  bazel-out  bazel-stage1  bazel-testlogs  w
test/bazel/stage1/main/: BUILD  hello-world.cc
test/bazel/stage3/: .gitignore
test/cargo/: Cargo.toml
test/cmake/: .gitignore  CMakeLists.txt
test/cmake/files/: CMakeLists.txt.1  CMakeLists.txt.2
test/make/: .gitignore  Makefile  load  load.c  perf.data  simple.c  test.py
test/make/cpucounters.trace/: form.template
test/make/cpucounters.trace/Trace1.run/: RunIssues.storedata
test/make/cpucounters.trace/Trace3.run/: RunIssues.storedata
test/make/cpuprofiler.trace/: form.template  open.creq
test/make/cpuprofiler.trace/Trace1.run/: RunIssues.storedata
test/ninja/: .gitignore  build.ninja  simple  simple.c
(+65 files in other folders)
