[project]
name = "build_system_parser"
version = "0.0.3"
description = "Control all Build Systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "FloydZ", email = "floyd@example.com" }
]

maintainers = [
  { name = "FloydZ", email = "floyd@example.com" }
]

dependencies = [
    "pylint",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/FloydZ/build_system_parser"
"Repository" = "https://github.com/FloydZ/build_system_parser"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
build_system_parser = "build_system_parser.cli:main"
